crates/carta/tests/snapshots/golden_e2e__mediawiki__mediawiki__table-cell-attrs.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{| class="wikitable"
|-
| style="color:red"| styled
|-
| style="text-align: right;"| right aligned
|-
| id="x" class="note"| classy
|}
