crates/carta/tests/snapshots/golden_e2e__mediawiki__mediawiki__table-cell-line-markers.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{| class="wikitable"
|-
| <nowiki></nowiki>* first line literal

* second line list
|}
