crates/carta/tests/snapshots/golden_e2e__mediawiki__mediawiki__table-ragged.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{| class="wikitable"
|-
| a
| b
|-
|
|
|-
| c
| d
|}
