crates/carta/tests/snapshots/golden_e2e__mediawiki__mediawiki__table-spans.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{| class="wikitable"
|-
| colspan="2"| wide
|-
| a
| b
|-
| rowspan="2"| tall
| top
|-
| bottom
|}
