crates/carta/tests/snapshots/golden_e2e__mediawiki__mediawiki__tables.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{| class="wikitable"
|-
! Name
! Age
|-
| Alice
| 30
|-
| Bob
| 25
|}
