crates/carta/tests/snapshots/golden_e2e__mediawiki__mediawiki__templates.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
Text with an inline {{tl|template}} reference.

{{Infobox|name=Test|value=42}}
