crates/carta/tests/snapshots/golden_e2e__mediawiki__mediawiki__unterminated-tag.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
A tag that never closes: &lt;a keeps going as text.

Something that is not a tag at all: &lt;notatag lingers here.

A lone bracket &lt; on its own stays literal.
